hphp/test/slow/magic-methods/get.php.expectf
Fatal error: Magic `__get` methods are no longer supported in %s/get.php on line 4
